--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -54,7 +54,7 @@ The most popular long read sequencers are produced by ONT and PacBio.
 It is beneficial to understand how they work and their error profiles to fully utilise the data they produce.
 This course aims to introduce you to ONT and PacBio quality control and checking.
 
-Sessions will start with a brief presentation followed by self-paced computer practicals guided by an online interactive book. The book will contain theory, practice code, and exercises. Multiple choice questions will guide the interpretation of results.
+Sessions will start with a brief presentation followed by self-paced computer practicals guided by this online interactive book. This book contains theory, practice code, and exercises. Multiple choice questions will guide the interpretation of results.
 
 At the end of this course learners will be able to:
 
@@ -162,7 +162,7 @@ library(webexercises)
 ![](figures/ONT_logo.png){style="width:600px; border-radius:15px; border:5px solid white; background:null"}
 </center>
 
-In this section we are going to carry out a quick QC of ONT data using the tool suite NanoPack and the tool Porechop. For this we will use the fastq files.
+In this section we are going to carry out a quick QC of ONT data using the tool suite NanoPack and the tool Porechop. For this we will use fastq files.
 
 Before carrying out analysis we will cover some background of ONT data. This will include [file formats](#ont_file_formats), & [basecalling](#ont_basecalling).
 
@@ -178,7 +178,7 @@ Although we will only be using fastq files for this tutorial it is important to 
 ![](figures/arrow-logo_chevrons_black-txt_white-bg.png){style="width:150px; border-radius:15px"}
 </center>
 
-The POD5 format is the ONT created format to store nanopore DNA data in an easily accessible manner. The files end with the extension `.pod5` and is normally created by the ont tool `MinKNOW`. It is a collection of [Apache Arrow tables](https://arrow.apache.org/docs/java/table.html) (it is very unlikely you need to understand Apache Arrow tables).
+The POD5 format is the ONT created format to store nanopore DNA data in an easily accessible manner. The files end with the extension `.pod5` and is normally created by the ONT tool `MinKNOW`. It is a collection of [Apache Arrow tables](https://arrow.apache.org/docs/java/table.html) (it is very unlikely you need to understand Apache Arrow tables).
 
 The POD5 file format contains the following information:
 
@@ -198,7 +198,7 @@ The POD5 format is quite new and was released as an early preview in May 2022. P
 POD5 links:
 
 - [Main POD5 github page](https://github.com/nanoporetech/pod5-file-format)
-- [POD5 File FOrmat Design Details](https://github.com/nanoporetech/pod5-file-format/blob/master/docs/DESIGN.md)
+- [POD5 File Format Design Details](https://github.com/nanoporetech/pod5-file-format/blob/master/docs/DESIGN.md)
 - [POD5 Format Specification](https://github.com/nanoporetech/pod5-file-format/blob/master/docs/SPECIFICATION.md)
 - [POD5 Tools commands](https://github.com/nanoporetech/pod5-file-format/blob/master/python/pod5/README.md#tools)
 
@@ -227,7 +227,7 @@ You can convert a Fast5 file to a Pod5 file with the pod5 tools command [`pod5 c
 
 The MinION and GridION output a single sequencing summary file in addition to the POD5/Fast5 files. This file contains metdata which describes each sequenced read.
 
-We will not use Fast5 or summary files for this tutorial as they are not needed most of the time. It is likely these files will not be initially provided to you by a sequencing service as they are very large. However, if you do require them you can always ask but be careful with how long the sequencing centre will retain your data.
+We will not use POD5, Fast5 or summary files for this tutorial as they are not needed most of the time. It is likely these files will not be initially provided to you by a sequencing service as they are very large. However, if you do require them you can always ask but be careful with how long the sequencing centre will retain your data.
 
 ### BAM file
 <center>
@@ -728,7 +728,7 @@ We will filter out sequences that are shorter than 500bp (`-l 500bp`) and filter
 ```{bash eval=FALSE}
 chopper -q 10 -l 500 \
 -i porechop/Acinetobacter.porechop.fastq > \
-nanofilt/Acinetobacter.chopperq10minlen500.porechop.fastq
+chopper/Acinetobacter.chopperq10minlen500.porechop.fastq
 ```
 
 Are the chosen options appropriate? Let\'s find out.
