--- a/long_read_qc/10-PB_background.Rmd
+++ b/long_read_qc/10-PB_background.Rmd
@@ -40,7 +40,7 @@ For more information see: https://pacbiofileformats.readthedocs.io/en/13.0/Prime
 
 ## HiFi reads
 
-The ZMW reads are processed on the sequencing instrument to produce HiFi reads, using the circular consensus (CCS) tool. CCS generates high accuracy sequences from a consensus of many subreads (i.e\. there would be several of the grey insert regions shown above in every ZMW read). By taking the consensus sequences (represented by the yellow and purple strands in the diagram below) HiFi reads have an accuracy of Q≥20 (99%)
+The ZMW reads are processed on the sequencing instrument to produce HiFi reads, using the circular consensus (CCS) tool. CCS generates high accuracy sequences from a consensus of many subreads (i.e\. there would be several of the grey insert regions shown above in every ZMW read). By taking the consensus sequences HiFi reads have an accuracy of Q≥20 (99%). In the diagram below the insert region is shown by purple and yellow lines representing the sequences obtained by each strand of the template DNA, sequencing errors by the red bases, and the green line represents the high-accuracy consensus read.
 
 <center>
 ![](figures/hifi.png){style="width:800px; border-radius:15px; background:null"}
