--- a/long_read_qc/packages.bib
+++ b/long_read_qc/packages.bib
@@ -11,7 +11,7 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2024},
-  note = {R package version 0.40},
+  note = {R package version 0.41},
   url = {https://github.com/rstudio/bookdown},
 }
 
@@ -37,6 +37,15 @@
   year = {2024},
   note = {R package version 1.48},
   url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-remotes,
+  title = {remotes: R Package Installation from Remote Repositories, Including
+GitHub},
+  author = {Gábor Csárdi and Jim Hester and Hadley Wickham and Winston Chang and Martin Morgan and Dan Tenenbaum},
+  year = {2024},
+  note = {R package version 2.5.0},
+  url = {https://remotes.r-lib.org},
 }
 
 @Manual{R-webexercises,
