--- a/long_read_qc/13-PB_QC.Rmd
+++ b/long_read_qc/13-PB_QC.Rmd
@@ -42,15 +42,9 @@ opts_p <- c("__7370__", answer="__10540__", "__11300__")
 ```
 Which bin contains the greatest number of reads?  `r longmcq(opts_p)`
 
-Underneath the plot showing the distribution of read lengths are two quality plots showing the phred quality of head and tail bases (the first and last 100 bases in a read).
+Underneath the plot showing the distribution of read lengths are two quality plots showing the phred quality of head and tail bases (the first and last 100 bases in a read). You should see that quality scores are mostly in the range of 83-86.
 
-Strangely these plots appear to be empty. However, try ‘mousing over’ the empty plot. What do you see? Does this give an idea as to why the plots might be empty? When you think you might have an answer, click on the button below:
-
-`r hide("Why are the RabbitQCPlus plots empty?")`
-Quality scores for PacBio [fastq](https://en.wikipedia.org/wiki/FASTQ_format) files follow the sanger convention, running from 0 and 93 (ASCII 33-126). Unfortunately, the output of RabbitQCPlus plots a figure where the y-axis is limited to display between 0 and 42. While this is fine for Illumina data, it means that we don’t see any results in the plots for PacBio data. Mousing over the plot can reveal the quality scores at each position. You should see that quality scores are mostly in the range of 83-86. 
-`r unhide()`
-
-One solution to this problem is to use an alternative program to inspect quality. In [Chapter 4](https://neof-workshops.github.io/QC_91wlgv/Illumina/04-Good_quality_data.html) of the Illumina QC bookdown you used a program called fastqc to inspect the quality of Illumina data. How might you use fastqc to inspect the quality of this PacBio hifi file? Have a go at this before checking the answer below.
+RabbitQCPlus does not show the quality across the entire lengths of the reads. Due to the varibale length of PacBIo reads you dod not normally want to at the quality over the entire length but in case you do, one solution  is to use an alternative program to inspect quality. In [Chapter 4](https://neof-workshops.github.io/QC_91wlgv/Illumina/04-Good_quality_data.html) of the Illumina QC bookdown you used a program called fastqc to inspect the quality of Illumina data. How might you use fastqc to inspect the quality of this PacBio hifi file? Have a go at this before checking the answer below.
 
 
 `r hide("Inspecting PacBio data quality with fastqc")`
@@ -68,7 +62,7 @@ firefox fastqc_output/ERR13246467_qc.filt.fastqc.html
 ```
 `r unhide()`
 
-You should now be able to view the fastqc quality plots for the PacBio hifi fastq file. RabbitQCPlus is considerably quicker and more efficient than fastqc at generating plots, which can be very useful when dealing with many and/or large files. If you want to do a quick inspection of summary tables, read length distribution and GC content, and don’t mind ‘mousing-over’ the quality plots, RabbitQCPlus is a useful tool. But if you want a more detailed visual output, consider using fastqc (either on the complete file, or on a subset of reads).
+You should now be able to view the fastqc quality plots for the PacBio hifi fastq file. RabbitQCPlus is considerably quicker and more efficient than fastqc at generating plots, which can be very useful when dealing with many and/or large files. If you want to do a quick inspection of summary tables, read length distribution, GC content, and head+tail quality, RabbitQCPlus is a useful tool. But if you want a more detailed visual output, consider using fastqc (either on the complete file, or on a subset of reads).
 
 ## Final summary
 <center>
