--- a/Illumina_QC/Illumina Quality Control.Rmd
+++ b/Illumina_QC/Illumina Quality Control.Rmd
@@ -63,27 +63,27 @@ At the end of this book learners will be able to:
 column_1 <- c(
   #1 cluster intro
   '[**Cluster intro**](#cluster)', 
- '[![](figures/cluster.png){height="150"}](#cluster)',
+ '[![](figures/cluster.png){style="height:150px; background:white; border-radius:5px; border: white solid 5px"}](#cluster)',
  #3 Good q
     '[**Good Illumina data**](#goodtutorial)', 
- '[![](figures/bacteria.png){height="150"}](#goodtutorial)',
+ '[![](figures/bacteria.png){style="height:150px; background:white; border-radius:5px; border: white solid 5px"}](#goodtutorial)',
  #5 QC exercise
    '[**QC exercise**](#qcexercise)', 
- '[![](figures/exercise.png){height="150"}](#qcexercise)',
+ '[![](figures/exercise.png){style="height:150px; background:white; border-radius:5px; border: white solid 5px"}](#qcexercise)',
  #7 Appendix
    '[**Appendix**](#usefultools)', 
- '[![](figures/toolbox.png){height="150"}](#usefultools)'
+ '[![](figures/toolbox.png){style="height:150px; background:white; border-radius:5px; border: white solid 5px"}](#usefultools)'
 )
 column_2 <- c(
   #2 setup
   '[**Setup**](#setupchap)', 
- '[![](figures/start.png){height="150"}](#setupchap)',
+ '[![](figures/start.png){style="height:150px; background:white; border-radius:5px; border: white solid 5px"}](#setupchap)',
  #4 poorer q
    '[**Poorer Illumina data**](#poortutorial)', 
- '[![](figures/bacteria_2.png){height="150"}](#poortutorial)',
+ '[![](figures/bacteria_2.png){style="height:150px; background:white; border-radius:5px; border: white solid 5px"}](#poortutorial)',
  #6 MultiQC
    '[**MultiQC**](#multiqcchap)', 
- '[![](figures/multiqc_icon_color.png){height="150"}](#multiqcchap)',
+ '[![](figures/multiqc_logo_color.png){style="height:100px; background:white; border-radius:5px; border: white solid 5px"}](#multiqcchap)',
  #8 empty
  "",""
 )
@@ -107,40 +107,82 @@ library(webexercises)
 ```
 # Cluster Introduction {#cluster}
 <center>
-![](figures/cluster.png){style="width:200px"}
+![](figures/cluster.png){style="width:200px; background: white; border-radius:5px"}
 </center>
 
 ## Logon instructions
-For this workshop we will be using Virtual Network Computing (VNC). Connect to the VNC with a browser by using the webVNC link you were sent.
 
-You will now be in a logged-in Linux VNC desktop with two terminals. You will see something as below (there may be only one terminal which is fine). If you do not see something similar please ask for assistance.
+For this workshop we will be using Virtual Network Computing (<u id='vnc'>VNC</u>). Connect to the <u id='vnc'>VNC</u> with a browser by using the webVNC link you were sent.
+
+You will now be in a logged-in Linux <u id='vnc'>VNC</u> desktop with two terminals. You will see something as below (there may be only one terminal which is fine). If you do not see something similar please ask for assistance.
+
 <center>
 ![](figures/logon_pic.png){style="width:800px"}
 </center>
 
-If the VNC is taking up too much/little space of your browser you can use the zoom of your browser to adjust the size. Ensure you can see one whole terminal.
+If the <u id='vnc'>VNC</u> is taking up too much/little space of your browser you can use the zoom of your browser to adjust the size. Ensure you can see one whole terminal.
 
-These instructions will not work outside of this workshop. If you would like to install your own Linux OS on your desktop or laptop we would recommend Mint Linux. 
+`r hide("How to zoom with your browser")`
+You may need to zoom out with your browser so you can see the full webVNC window.
+
+- __Chrome__: Click on the __three dots in vertical line__ (
+```{r, echo=FALSE}
+icons::icon_style(icons::ionicons("ellipsis-vertical"), background="white", border="solid white")
+``` 
+) on the top left for a dropdown menu which includes zoom options.
+- __Edge__: Click on the __three horizontal lines__ (
+```{r, echo=FALSE}
+icons::icon_style(icons::ionicons("ellipsis-horizontal"), background="white", border="solid white")
+``` 
+) on the top left for a dropdown menu which includes zoom options.
+- __Firefox__: Click on the __three dots in horizontal line__ (
+```{r, echo=FALSE}
+icons::icon_style(icons::fontawesome("bars", style="solid"), background="white", border="solid white")
+```
+) on the top left for a dropdown menu which includes zoom options.
+`r unhide()`
+
+These instructions will not work outside of this workshop. If you would like to install your own Linux <u id='os'>OS</u> on your desktop or laptop we would recommend Mint Linux 
 
 The following link is a guide to install Mint Linux:  
 https://linuxmint-installation-guide.readthedocs.io/en/latest/
 
+If you have a windows machine and would like to install linux on it you can install Windows Subsystem for Linux (<u id='wsl'>WSL</u>). 
+
+The following link is a guide to install linux via (<u id='wsl'>WSL</u>):
+https://learn.microsoft.com/en-us/windows/wsl/install
+
+
 ## The Terminal Window
+
 In our case the terminal window looks like the picture below. We are using the terminal window as our shell to interpret our commands to the kernel. Depending on your system and preferences it may look different.
+
 <center>
 ![](figures/terminal_window.png){style="width:800px"}
 </center>
 
 Already there is useful information for us on the terminal window.
 
-- __nsc206__: This is the login name, also known as the username. Your screen will show your username for the Linux machine/cluster you are logged into.
-- __ada02__: This is the machine name the user is logged into.
-- __\~__: This represents the current directory of the user, or the directory a command was run in. In the Linux OS and others __\'~\'__ is a shortcut to the user's home directory.
-- Everything after the __\'$\'__ is where commands are typed into the terminal. This is also referred to as the command line.
+-   **nsc206**: This is the login name, also known as the username. In this case nsc206 is a demonstrator's account. Your screen should show a different account name which will be your username for the Linux machine/cluster you are logged into.
+-   **ada02**: This is the machine name the user is logged into.
+-   **\~**: This represents the current directory of the user, or the directory a command was run in. In the Linux (<u id='os'>OS</u>) and others **'\~'** is a shortcut to the user's home directory.
+-   Everything after the **'\$'** is where commands are typed into the terminal. This is also referred to as the command line.
 
-To open a new terminal window, right click on the main screen, choose `Terminal`
+To open a new terminal window, right click on the main screen, choose `Terminal`.
 
 
+```{r, echo=FALSE}
+#Tippy tooltips
+tippy::tippy_this(elementId = "os", 
+                  tooltip = "Operating System",
+                  arrow = TRUE, placement = "bottom")
+tippy::tippy_this(elementId = "vnc", 
+                  tooltip = "Virtual Network Computing",
+                  arrow = TRUE, placement = "bottom")
+tippy::tippy_this(elementId = "wsl", 
+                  tooltip = "Windows Subsystem for Linux",
+                  arrow = TRUE, placement = "bottom")
+```
 
 <!--chapter:end:02-Cluster_Introduction.Rmd-->
 
@@ -185,8 +227,8 @@ cd QC_workshop/Illumina_QC/
 </center>
 
 This book requires some packages.
-Mamba forge was used to install them.
-To learn more about Mamba-forge and how to create your own environment please see the [appendix](#mamba_install).
+Miniforge was used to install them.
+To learn more about Miniforge and how to create your own environment please see the [appendix](#mamba_install).
 
 To set-up your environment for this book please run the following code (you must include the full stop and space at the front of the command).
 
@@ -255,7 +297,7 @@ Now we can run **`fastqc`**.
 
 -   The below command can be run over one line excluding the `\`.
 -   Alternatively, you can type `\` during a command and then press the enter key. The next line on the command line will start with `>`. This will allow you to continue typing the command on the line. This can be used to type one command over multiple lines.
--   For more information on bash escape please see our [Intro to unix materials](http://www.cgr.liv.ac.uk/illum/NEOFworkshops_5bfa93ca0482d69d/Intro_to_Unix/05-Tips_and_tricks.html#bash-escape)
+-   For more information on bash escape please see our [Intro to unix materials](https://neof-workshops.github.io/Unix_nxcdf7/Course/05-Tips_and_tricks.html#bash-escape)
 
 ```{bash eval=FALSE}
 fastqc -o raw_fastqc_output \
@@ -296,7 +338,7 @@ The `*` is a wildcard character that represents anything.
 
 `*_fastqc.html` represents all the files that end with `_fastqc.html`.
 
-For more information on wildcard characters please see ou [Intro to unix materials](http://www.cgr.liv.ac.uk/illum/NEOFworkshops_5bfa93ca0482d69d/Intro_to_Unix/12-Advanced_linux_practice.html#wildcard-characters)
+For more information on wildcard characters please see our [Intro to unix materials](https://neof-workshops.github.io/Unix_nxcdf7/Course/12-Advanced_linux_practice.html#wildcard-characters)
 `r unhide()`
 
 ```{r, echo = FALSE}
@@ -394,7 +436,7 @@ Some typical features to note are:
 
 -   The quality decreases towards the end of the reads
 -   The R2 reads have poorer quality than the R1 reads
--   The read sizes have a range compared to all being one size, however most of the reads are towards the long end of the range.
+-   The read sizes have a range compared to all being one size, however most of the reads are towards the long end of the range
 
 ### Quality checking MCQs
 <center>
@@ -603,14 +645,16 @@ library(webexercises)
 ```
 # QC exercises {#qcexercise}
 <center>
-![](figures/exercise.png){style="width:200px"}
+![](figures/exercise.png){style="width:200px; background: white; border-radius:5px"}
 </center>
 
-Now you will carry out Quality checking and control of a whole genome shotgun study and a 16S rRNA study. You will run through the Quality checking and Quality control using the examples to help you. There will be questions to answer after which there will be info on the data and what the QC has shown.
+Now you will carry out Quality checking and control of a whole genome shotgun study and a 16S rRNA study. 
+You will run through the Quality checking and Quality control using the examples to help you. There will be questions to answer. 
+After the question there will be info on the data and what the QC has shown.
 
 ## Whole shotgun metagenomics {#shotgun}
 <center>
-![](figures/kraken.png){style="width:200px"}
+![](figures/kraken.png){style="width:200px; background: white; border-radius:5px"}
 </center>
 
 The data from this exercise comes from the following link:
@@ -652,16 +696,16 @@ __Explanations__
 
 In this case it helps to know the adapter sequence, used for the Illumina sequencing, was Nextera. Nextera is decent but I and others online have experienced it has a slight bias. It prefers to ligate to certain sequence patterns, this bias is then shown as the GC content bias at the start of reads. Fortunately the rest of the GC content is fine. 
 
-In previous tests I have trimmed off the first 20bps to remove this bias and not removed the first 20bp. I found there was little difference in the downstream results for the two methods. 
+In previous tests I have trimmed off the first 20bps to remove this bias and not removed the first 20bp. I found there was little difference in the downstream results for the two methods. I therefore normally retain the first 20bp.
 
 As for the weird \"Per sequence GC content\" peak, We must remember that the metagenome sample contains many different organisms with different GC contents. Therefore a flat GC peak would be expected.
 
 ## 16S rRNA Metagenetics {#metagenetics}
 <center>
-![](figures/chime.png){style="width:200px"}
+![](figures/chime.png){style="width:200px; background: white; border-radius:5px"}
 </center>
 
-Before starting this exercise I must note this is not the normal method to quality control 16S rRNA data. Both QIIME2 and MOTHUR have their own methods but it can be useful to check the quality of 16S rRNA data.
+Before starting this exercise I must note this is not the normal method to quality control 16S rRNA data. Both QIIME2 and other 16S pipelines have their own methods but it can be useful to check the quality of 16S rRNA data beofre analysis.
 
 With that in mind we will only use `fastqc` to check the quality and features of a 16S rRNA dataset.
 
@@ -825,7 +869,7 @@ https://github.com/FelixKrueger/TrimGalore/blob/master/Docs/Trim_Galore_User_Gui
 Sometimes a fasta/fastq file will need to be modified to be properly used with a file or to remove a specific feature. Thankfully if you need to carry out a specific action someone else has probably needed to before you. Below are some tools that can be used to modify fasta/fastq files.
 
 ### Fastp
-This is a tool designed to be a \"all-in-one\" preprocessor for fastq files. This includes quality control. I find it very useful as the tool will only do what you tell it to do. This means you can tell it to only carry out length filtering and it will only do length filtering (unlike Trim Galore which will insist on quality trimming). 
+This is a tool designed to be an \"all-in-one\" preprocessor for fastq files. This includes quality control. I find it very useful as the tool will only do what you tell it to do. This means you can tell it to only carry out length filtering and it will only do length filtering (unlike Trim Galore which will insist on quality trimming). 
 
 You could therefore use the below command to trim all reads to a length of 120 and remove any read pairs where at least one read has a length shorter than 120. You'll then only have reads that are a length of 120. This is required for a few tools.
 
@@ -863,13 +907,6 @@ fasta_formatter -i in.fasta -o out.fasta -w 0
 ```
 
 __Github:__ https://github.com/agordon/fastx_toolkit
-
-### BBTools
-BBTools is a collection of various tools. There are tools for deduplication, mapping, merging, and more. There is a lot so if you are interested it would be best to look at the links below.
-
-__Main page__: https://jgi.doe.gov/data-and-tools/software-tools/bbtools/bb-tools-user-guide/
-
-__Data Preprocessing:__ https://jgi.doe.gov/data-and-tools/software-tools/bbtools/bb-tools-user-guide/data-preprocessing/
 
 # Mamba
 <center>
